<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/white"
        android:orientation="vertical">
        <!--back-->
        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/_10sdp">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Back to login"
                android:fontFamily="@font/bodoni_svtytwo_itc_tt_book"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/tv_text_color"
                android:padding="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="@dimen/_24sdp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            >


            <TextView
                android:textColor="@color/gray"
                android:fontFamily="@font/bodoni_svtytwo_itc_tt_book"
                android:textSize="@dimen/_15ssp"
                android:text="@string/forgetStaticText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/edittext_border"
                android:hint="Username or email"
                android:fontFamily="@font/bodoni_svtytwo_itc_tt_book"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:textColor="@color/dark_grey"
                android:maxLength="50"
                android:padding="5sp"
                android:textColorHint="@color/gray"
                android:singleLine="true"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/btnReset"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:padding="8dp"
                android:fontFamily="@font/bodoni_svtytwo_itc_tt_book"
                android:gravity="center"
                android:textSize="@dimen/_14ssp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/pink_button_bg"
                android:text="@string/reset"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"/>

            <TextView
                android:id="@+id/tvCancel"
                android:textColor="@color/gray"
                android:padding="8dp"
                android:fontFamily="@font/bodoni_svtytwo_itc_tt_book"
                android:textSize="@dimen/_18ssp"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/btn_cancel"
                android:gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>




         </LinearLayout>


</layout>